WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187051
REGRESSION(
r233065
): Build broken with clang-3.8 and libstdc++-5
https://bugs.webkit.org/show_bug.cgi?id=187051
Summary
REGRESSION(r233065): Build broken with clang-3.8 and libstdc++-5
Carlos Alberto Lopez Perez
Reported
2018-06-26 10:22:55 PDT
r233065
: <
https://trac.webkit.org/changeset/233065
> broke our Ubuntu bot (Ubuntu 16.04: -> clang-3.8 with libstcd++-5.4) ./../Source/JavaScriptCore/bytecode/UnlinkedCodeBlock.h:312:16: error: chosen constructor is explicit in copy-initialization return { profile, recommendedIndexingType }; ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ /usr/bin/../lib/gcc/x86_64-linux-gnu/5.4.0/../../../../include/c++/5.4.0/tuple:612:19: note: constructor declared here constexpr tuple(_U1&& __a1, _U2&& __a2) ^ 1 error generated. Log:
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Release%20Ubuntu%20LTS%20%28Build%29/builds/13359/steps/compile-webkit/logs/stdio
Attachments
Patch
(1.64 KB, patch)
2018-06-26 10:28 PDT
,
Carlos Alberto Lopez Perez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Alberto Lopez Perez
Comment 1
2018-06-26 10:28:20 PDT
Created
attachment 343615
[details]
Patch
WebKit Commit Bot
Comment 2
2018-06-26 11:01:04 PDT
Comment on
attachment 343615
[details]
Patch Clearing flags on attachment: 343615 Committed
r233206
: <
https://trac.webkit.org/changeset/233206
>
WebKit Commit Bot
Comment 3
2018-06-26 11:01:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug