REGRESSION(r233065): Build broken with clang-3.8 and libstdc++-5 https://bugs.webkit.org/show_bug.cgi?id=187051

Reviewed by Mark Lam.

Revert r233065 changes over UnlinkedCodeBlock.h to allow
clang-3.8 to be able to compile this back (with libstdc++5)

* bytecode/UnlinkedCodeBlock.h:
(JSC::UnlinkedCodeBlock::decompressArrayAllocationProfile):


Canonical link: https://commits.webkit.org/202297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233206 268f45cc-cd09-0410-ab3c-d52691b4dbfc